# app/Models/Subscription.php
@@ -1,0 +1,20 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class Subscription extends Model
+{
+    use HasFactory;
+
+    protected $fillable = [
+        'name', 'description'
+    ];
+
+    public function user()
+    {
+        return $this->belongsTo(User::class);
+    }
+}
